@@ -9,3 +9,6 @@ ADD `device_types` tinyint(3) NOT NULL DEFAULT '0';
 
 ALTER TABLE `fc_job`
 ADD `workload_profile` tinyint(3) NOT NULL DEFAULT '0';
+
+ALTER TABLE `fc_job`
+ADD `priority` tinyint(3) NOT NULL DEFAULT '1';
